# waypoint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lib.cpp  main.cpp
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  USER_GUIDE.md
examples/quick_start_add_subdirectory/: CMakeLists.txt  CMakePresets.json  build.sh  the_answer.cpp
examples/quick_start_build_and_install/: CMakeLists.txt  build.sh  the_answer.cpp
examples/quick_start_custom_main/: CMakeLists.txt  build.sh  main.cpp  test01.cpp  test02.cpp  the_answer.cpp  the_answer.hpp
infrastructure/: CMakeLists.txt  CMakePresets.json  tools.cmake
infrastructure/docker/: build.dockerfile
infrastructure/docker/context/: set_up_image_root.bash  set_up_image_user.bash
infrastructure/hooks/git/: git_post_checkout_hook  git_post_checkout_hook.sh  git_post_commit_hook  git_post_commit_hook.sh  git_pre_commit_hook  git_pre_commit_hook.sh
scripts/: basic_shared_build.sh  basic_shared_build_docker.sh  basic_static_build.sh  build.py  clean.bash  clean.sh  coverage.bash  coverage.sh  default_shared_build.sh  default_shared_build_docker.sh  default_static_build.sh  enter_docker.bash  enter_docker.sh  format_code.bash  format_code.sh  git_pre_commit_hook.py  init.sh  short_build.bash  short_build.sh  static_analysis.bash  static_analysis.sh  static_analysis_full.sh  static_analysis_incremental.sh  valgrind.bash  valgrind.sh  verify_build.bash  verify_build.sh
scripts/internal/: build.py  git_post_checkout_hook.py  git_post_commit_hook.py  git_pre_commit_hook.py  install_hooks.py  run_in_docker.py
scripts/internal/python_imports/: __init__.py
scripts/internal/python_imports/internal/: Task.py  checks.py  cmake.py  compiler.py  docker_support.py  file_types.py  files.py  formatting.py  git_hook_support.py  legal.py  process.py  static_analysis.py  system.py  time_utils.py
scripts/python_imports/: __init__.py
scripts/python_imports/internal/: Task.py  checks.py  cmake.py  compiler.py  coverage.py  file_types.py  files.py  formatting.py  legal.py  process.py  static_analysis.py  system.py  time_utils.py
src/assert/: assert.cpp
src/process/include/process/: process.hpp
src/process/linux/: process.cpp
src/waypoint/: entry_point.cpp  impls.cpp  registrar.cpp  waypoint.cpp
src/waypoint/include/waypoint/: waypoint.hpp
src/waypoint/internal/: impls.hpp
test/functional_tests/029_results/: main.cpp
test/functional_tests/035_assume/: main.cpp
test/functional_tests/039_process/: main.cpp
test/functional_tests/066_results/: main.cpp
test/functional_tests/072_assume/: main.cpp
test/functional_tests/075_env_vars/: main.cpp
test/functional_tests/096_std_pipes/: main.cpp
test/functional_tests/097_no_reuse/: main.cpp
test/functional_tests/098_no_reuse_in_process/: main.cpp
test/install_tests/add_subdirectory_test/infrastructure/: CMakeLists.txt  CMakePresets.json
test/install_tests/find_package_exact_version_test/infrastructure/: CMakeLists.txt  CMakePresets.json
test/install_tests/find_package_no_version_test/infrastructure/: CMakeLists.txt  CMakePresets.json
test/test_helpers/include/test_helpers/: test_helpers.hpp
